5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1758_1580.log
== TEST (2019-05-28 11:57:03) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i <= size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:13) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i <= size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:00) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i <= size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:00) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i <= size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:07) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i <= size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:50) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i <= size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:00:02) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:00:06) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- EXECUTION TIME:
0.395556
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 25, in <module>
    print(vnomes[i])
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:00:11) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
media = 0
i = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ size(vn)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- EXECUTION TIME:
0.32594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 25, in <module>
    print(vnomes[i])
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:44:17) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ (size(vn) - fal)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[i])

	


-- EXECUTION TIME:
0.447179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 28, in <module>
    print(vnomes[i])
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:44:33) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ (size(vn) - fal)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[maior])

	


-- EXECUTION TIME:
0.277274
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
3
5
4.67
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
2.2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:45:03) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ (size(vn) - fal)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[maior])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:45:15) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1
med = sum(vn)/ (size(vn) - fal)
print(fal)
print(apr)
print(rep)
print(round(med, 2))
print(vnomes[maior])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:46:58) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- EXECUTION TIME:
0.302909
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
3
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:47:23) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2)
print(vnomes[maior])

	


-- ERROR:
File "XXXX", line 28
    print(vnomes[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:47:34) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:48:35) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] > 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:49:36) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] >= 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- EXECUTION TIME:
0.447809
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:49:40) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] >= 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:50:29) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] >= 6):
		apr = apr + 1
	elif(vn[i] > 0 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- EXECUTION TIME:
0.529397
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:17:27) 
-- CODE:
from numpy import *
vn = array(eval(input("Notas dos alunos: ")))
vnomes = array(eval(input("Nomes dos alunos: ")))
fal = 0
apr = 0
rep = 0
soma = 0
i = 0
maior = 0

while(i < size(vn)):
	if(vn[i] == -1):
		fal = fal + 1
	elif(vn[i] >= 6):
		apr = apr + 1
	elif(vn[i] != -1 and vn[i] < 6):
		rep = rep + 1
	if(vn[i] != -1):
		soma = soma + vn[i]
	if(vn[i] == max(vn)):
		maior = i
	i = i + 1

print(fal)
print(apr)
print(rep)
print(round(soma / (size(vn) - fal), 2))
print(vnomes[maior])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
